Added db to list app

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,18 +6,23 @@
 </div>
 
 <div class="box">
-  <% for (let i=0; i<newItems.length; i++) { %>
-  <div class="item">
-    <input type="checkbox">
-    <p><%= newItems[i] %></p>
-  </div>
-  <% } %>
+  <% listItems.forEach(function(item){ %>
+    <!-- //Form for deleting items -->
+  <form action="/delete" method="post">
+    <div class="item">
+      <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+      <p><%= item.name %></p>
+    </div>
+    <input type="hidden" name="listName" value="<%= listTitle%>"></input>
+  </form>
+  <% }); %>
 
   <!-- is for home route. Post info to server, at the home route -->
   <form class="item" action="/" method="post">
     <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up!</button> -->
     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-    <button type="submit" name="list" value=<%= listTitle %>>+</button>
+    <!-- Buttons submit data and make post request -->
+    <button type="submit" name="list" value="<%= listTitle %>">+</button>
 
   </form>
 </div>
